# wow-ports

./: .gitignore  CLAUDE.md  FORMATS.md  Makefile  PROTOCOL.md  README.md
js/: Makefile  README.md  benchmark.js  eslint.config.js  index.js  index.ts  package-lock.json  package.json  tsconfig.json
js/lib/: LibCompress.js  LibCompress.ts  LibSerialize.js  LibSerialize.ts  LuaDeflate.js  LuaDeflate.ts  LuaDeflateNative.js  LuaDeflateNative.ts  Pipeline.js  Pipeline.ts  VuhDoSerializer.js  VuhDoSerializer.ts  WowAceDeserializer.js  WowAceDeserializer.ts  WowAceSerializer.js  WowAceSerializer.ts  WowCbor.js  WowCbor.ts  types.ts
js/test/: ace_deserializer.test.js  ace_serializer.test.js  ace_serializer.test.ts  cbor.test.js  cbor.test.ts  fixtures.test.js  lib_compress.test.js  lib_compress.test.ts  lib_serialize.test.js  lib_serialize.test.ts  (+4 more)
lua/: fetch-deps.sh  shim.lua  test_ace_serializer.lua  test_lib_serialize.lua  test_lua_deflate.lua
python/: LICENSE  Makefile  README.md  pyproject.toml
python/azerite/: __init__.py  ace_serializer.py  lib_compress.py  lib_serialize.py  lua_deflate.py  lua_deflate_native.py  pipeline.py  vuhdo_serializer.py  wow_cbor.py
python/tests/: test_ace_serializer.py  test_cbor.py  test_fixtures.py  test_lib_compress.py  test_lib_serialize.py  test_lua_deflate.py  test_pipeline.py
python/wow_serialization/: __init__.py  ace_serializer.py  lib_serialize.py  lua_deflate.py  lua_deflate_native.py  pipeline.py  vuhdo_serializer.py
ruby/: .rubocop.yml  Gemfile  Makefile  README.md  azerite.gemspec  benchmark.rb  lib_compress.rb  lib_serialize.rb  lua_deflate.rb  lua_deflate_native.rb  pipeline.rb  vuhdo_serializer.rb  wow_cbor.rb  wowace.rb
scripts/: generate-tests.py
templates/: ace_serializer.js.j2  ace_serializer.lua.j2  ace_serializer.py.j2  ace_serializer.rb.j2  cbor.js.j2  cbor.py.j2  cbor.rb.j2  lib_serialize.js.j2  lib_serialize.lua.j2  lib_serialize.py.j2  lib_serialize.ruby.j2  lua_deflate.js.j2  lua_deflate.lua.j2  lua_deflate.py.j2  lua_deflate.ruby.j2  pipeline.js.j2  pipeline.python.j2  pipeline.rb.j2
testdata/: fixtures.json
testing/: README.md  TEST-INDEX.md  generate-tests.py  pyproject.toml  tests.yaml
(+66 files in other folders)
