[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "azerite"
version = "0.1.0"
description = "Decode and encode WoW addon export strings (WeakAuras, ElvUI, Plater, MDT, VuhDo, and more)"
license = "ISC"
authors = [{ name = "Joe Carter", email = "theupperquartile@gmail.com" }]
keywords = ["wow", "world-of-warcraft", "weakauras", "elvui", "plater", "addon", "serialization", "codec"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
]
requires-python = ">=3.10"

dependencies = ["cbor2>=5.4"]

[project.urls]
Homepage = "https://github.com/ylt/azerite"
Repository = "https://github.com/ylt/azerite"

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-describe>=2.0", "pyrefly"]

[tool.pyrefly]
project-includes = ["azerite"]
python-version = "3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["azerite*"]
